--BJS2-96827 - Corrections based on feedback