@@ -1,8 +1,7 @@
 package faang.school.postservice.service;
 
-import faang.school.postservice.model.ad.Ad;
 import faang.school.postservice.repository.ad.AdRepository;
-import faang.school.postservice.service.ad.AdService;
+import faang.school.postservice.service.ad.AdCleanupService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -14,7 +13,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 import org.springframework.test.util.ReflectionTestUtils;
 
-import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 
 @ExtendWith(MockitoExtension.class)
@@ -27,48 +26,35 @@ public class AdServiceTest {
     private ThreadPoolTaskExecutor executor;
 
     @InjectMocks
-    private AdService adService;
-
-    Ad ad1 = Ad.builder().id(1L).appearancesLeft(0).endDate(LocalDateTime.now().plusDays(1)).build();
-    Ad ad2 = Ad.builder().id(2L).appearancesLeft(0).endDate(LocalDateTime.now().plusDays(1)).build();
-    Ad ad3 = Ad.builder().id(3L).appearancesLeft(0).endDate(LocalDateTime.now().plusDays(1)).build();
-    Ad ad4 = Ad.builder().id(4L).appearancesLeft(2).endDate(LocalDateTime.now().minusDays(1)).build();
-    Ad ad5 = Ad.builder().id(5L).appearancesLeft(3).endDate(LocalDateTime.now().minusDays(1)).build();
+    private AdCleanupService adCleanupService;
 
     @BeforeEach
     void setup() {
-        adService = new AdService(adRepository, executor);
+        adCleanupService = new AdCleanupService(adRepository, executor);
     }
 
     @Test
     void testClearExpiredAdsSuccess() {
-        ReflectionTestUtils.setField(adService, "chunkSize", 1000);
+        ReflectionTestUtils.setField(adCleanupService, "chunkSize", 1000);
+        List<Long> testAdIds = List.of(1L, 2L, 3L, 4L, 5L);
 
-        List<Ad> testAdList = List.of(ad1, ad2, ad3, ad4, ad5);
-
-        Mockito.when(adRepository.findAll()).thenReturn(testAdList);
-        adService.clearExpiredAds();
+        Mockito.when(adRepository.findExpiredAdIds()).thenReturn(testAdIds);
+        adCleanupService.clearExpiredAds();
 
         ArgumentCaptor<Runnable> captor = ArgumentCaptor.forClass(Runnable.class);
         Mockito.verify(executor).execute(captor.capture());
         captor.getValue().run();
 
-        List<Long> testAdIds = List
-                .of(ad1.getId(), ad2.getId(), ad3.getId(), ad4.getId(), ad5.getId());
         Mockito.verify(adRepository).deleteAllById(testAdIds);
     }
 
     @Test
     void testClearExpiredAdsListIsEmpty() {
-        ReflectionTestUtils.setField(adService, "chunkSize", 1000);
+        ReflectionTestUtils.setField(adCleanupService, "chunkSize", 1000);
 
-        List<Ad> testAdList = List.of(ad1, ad2, ad3, ad4, ad5);
-        testAdList.forEach((ad)->ad.setAppearancesLeft(2));
-        testAdList.forEach((ad)->ad.setEndDate(LocalDateTime.now().plusDays(2)));
-
-        Mockito.when(adRepository.findAll()).thenReturn(testAdList);
-
-        adService.clearExpiredAds();
+        List<Long> emptyList = Collections.emptyList();
+        Mockito.when(adRepository.findExpiredAdIds()).thenReturn(emptyList);
+        adCleanupService.clearExpiredAds();
 
         Mockito.verify(adRepository, Mockito.never()).deleteAllById(Mockito.anyList());
     }
